# Hidden-Attractors-Localization

./: .gitignore  .zenodo.json  AUTHORS.md  CHANGELOG.md  CITATION.cff  GUIA_CODIGOS_PIPELINE.txt  Hidden Attractors Fractional Order.code-workspace  README.md  RELEASE_NOTES.md  REPRODUCIBILITY.md  candidates_summary.txt  chaotic_candidates_summary.md  chua_basin_comparison_h001.py  chua_basin_lib.c  chua_hidden_backend.c  chua_initial_cond.py  codemeta.json  compare_solvers_saturation.py  danca_ref_trajectory.csv  exploration_summary.md  extended_runs_report.txt  generate_all_plots_and_summary.py  inspect_full_candidate_record.py  inspect_top_candidate.py  launch_danca2017_jobs.py  lure_adaptive_contact_test.py  lure_biased_multiparam_continuation.py  lure_top3_sphere_robustness.py  machado_targeted_verification.py  plot_chaotic_candidates.py  positive_x_basin_sweep.py  pyproject.toml  resumen_chua_fraccionario_semillas_continuacion_integradores.md  resumen_metodologias_candidatos_ocultedad.md  resumen_metodologias_candidatos_ocultedad.md.metadata.json  robustness_overlay_c_trajectories.py  run_extended_search.py  run_machado_targeted_verification.ps1  run_rank0004_resume.ps1  scratch_debug.py  (+9 more)
version_2/: .gitignore  00_make_chua_fractional_memory_experiment_matrix.py  INSTALL.md  LICENSE  MANIFEST.in  MANIFEST.md  README.md  REFERENCE_GUIDE.md  THESIS_CLAIMS.md  USER_MANUAL.md  mkdocs.yml  pyproject.toml  resumen_chua_saturacion_funcion_descriptiva_sesgada.md  resumen_chua_saturacion_funcion_descriptiva_sesgada_corregida.md  run_hiddenness_biased_candidates.py  search_saturation_biased_candidates_corrected.py
version_2/artifacts/: README.md
version_2/benchmarks/: README.md  bench_basin_grid.py  bench_efork_single_trajectory.py  bench_seed_generation.py  conftest.py
version_2/configs/: README.md  chua_arctan_wu2023_caputo.json  chua_classical_lure_default.yaml  chua_fractional_nonsmooth.yaml  lure_biased_multiparam_q09998.yaml  lure_biased_multiparam_q09998_parallel_20260514_170016.yaml  lure_candidate_route.yaml  machado_candidate_route.yaml  machado_targeted_verification.yaml  report_heatmap_inputs.json  unified_caputo_protocol.json  user_chua_fractional_h001_exploratory.yaml  validation_chua_integer_q1.json  validation_contract.json  validation_efork3_ghoreishi_ghaffari.json
version_2/cpc_submission/: PROGRAM_SUMMARY.md  README_CPC.md  REMAINING_WORK.md  SAMPLE_RUN.md  archive_manifest.json  reproducibility_checklist.md
version_2/docs/: adapting_new_systems.md  api_reference.md  api_stability.md  archive_policy.md  chua_arctan_wu2023_methodology.md  citation.md  cli_migration_legacy_entrypoints.md  code_reference_map.md  compile_postedit.txt  contributing.md  dependency_policy.md  development_hygiene.md  dynamical_analysis.md  efork3_validation.md  examples.md  examples_index.md  external_tools.md  f4_internal_lyapunov_validation.md  f5_dynamics_diagnostics.md  f6_integrated_chaos_validator.md  f7_method_comparison.md  figure_export_policy.md  figure_gallery.md  figure_scripts_inventory.md  figure_scripts_policy.md  final_freeze_checklist.md  fractional_chua_algebra_validation.md  freeze_status.md  getting_started.md  hiddenness_verification.md  index.md  installation.md  integer_chua_reference.md  library_structure.md  lure_candidate_route.md  lyapunov_cloned_dynamics.md  lyapunov_methods.md  manual_manifest.md  manual_manifest.yaml  manual_usuario_hidden_attractors_fo_didactico.tex  (+33 more)
version_2/examples/: README.md  aggregate_existing_robustness_overlay.py  custom_system_definition.py  dynamical_analysis_gallery.py  integer_lure_chua_protocol.py  list_final_candidates.py  minimal_chua_protocol.py  new_system_workflow_spec.py  quickstart_equilibria.py
version_2/figure_scripts/: chua_arctan_wu2023_plot_basins.py  chua_nonsmooth_memory_matrix_run_figure_tasks.py
version_2/hidden_attractors/: __init__.py  _stability.py  candidates.py  cli.py  contracts.py  io.py  legacy.py  parallel.py  paths.py  protocol_cli.py  reproducibility.py  seed_generation.py  validation_contract.py
version_2/references/: claims_manifest.yaml  traceability_matrix.md
version_2/release_package/: ARCTAN_C590_PROMOTION_BOUNDARY.md  BLOCKING_EVIDENCE_GAPS.md  BLOCKING_RELEASE_ITEMS.md  DOCS_COMMAND_SYNC_REPORT.md  FINAL_PYPI_TRACEABILITY_REPORT.md  PROGRAM_SUMMARY.md  PUBLISHING_POLICY.md  PYPI_BLOCKING_ITEMS.md  PYPI_RELEASE_CHECKLIST.md  PYPI_RELEASE_REPORT.md  README_RELEASE.md  REMAINING_WORK.md  SAMPLE_RUN.md  archive_manifest.json  reproducibility_checklist.md
version_2/scratch/: analyze_outcomes.py  analyze_outcomes_partition.py  merge_matrices.py
version_2/tests/: conftest.py  test_abm_fractional_diagnostics.py  test_adm_wu2023.py  test_archive_independence.py  test_attractor_only.py  test_attractor_status_labels.py  test_basin_smoke.py  test_biased_chua_example_single_entrypoint.py  test_biased_figure_manifest.py  test_bibliographic_validation.py  test_bifurcation_cli.py  test_bifurcation_smoke.py  test_boundedness_diagnostics.py  test_candidate_gate.py  test_centered_lure_workflow.py  test_chua_arctan_wu2023_algebra.py  test_chua_arctan_wu2023_seed_generation.py  test_chua_arctan_wu2023_validation_contract.py  test_chua_candidate_extended_hiddenness.py  test_ci_dependency_policy_consistency.py  test_ci_uses_unified_cli.py  test_classical_route_scope.py  test_cli_grouped_commands.py  test_cli_no_redundant_public_scripts.py  test_cli_overrides.py  test_cli_smoke.py  test_cloned_dynamics_discrepancy_diagnostics.py  test_cloned_dynamics_fischer_published.py  test_cloned_dynamics_fischer_published_all_rows.py  test_cloned_dynamics_published_structure.py  test_cloned_dynamics_reproduction_limitations.py  test_cloned_dynamics_synthetic.py  test_config_loader.py  test_continuation_cli.py  test_continuation_memory_policy.py  test_continuation_memory_validation.py  test_cpc_known_remaining_work.py  test_cpc_no_mojibake.py  test_cpc_readiness_metadata.py  test_cpc_submission_samples.py  (+122 more)
version_2/tools/: README.md  __init__.py  arctan_hidden_screen.py  chua_candidate_extended_hiddenness.py  (+4 more)
(+1257 files in other folders)
