[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidden-attractors-fo"
version = "0.1.0"
description = "Numerical workflows for locating and verifying hidden attractor candidates in fractional-order systems."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hidden Attractors Fractional Order project", email = "xerkkun@fyskode.com" }
]
keywords = ["fractional-order systems", "hidden attractors", "Chua", "Caputo", "EFORK"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]
# ── Core runtime ────────────────────────────────────────────────────────────
# Lower bounds follow SPEC-0 (https://scientific-python.org/specs/spec-0000/):
#   numpy   released 2023-06 → supported until 2025-06  (>=1.26)
#   matplotlib released 2023-09 → supported until 2025-09  (>=3.8)
# Bump these whenever CI drops an old Python minor, not before.
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
# ── Development ─────────────────────────────────────────────────────────────
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-benchmark>=4.0",
]
# ── Optional scientific analysis ─────────────────────────────────────────────
analysis = [
  "antropy>=0.1.6",
  "nolds>=0.6.1",
  "scipy>=1.12",
]
# ── Documentation build ──────────────────────────────────────────────────────
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
# ── Legacy scripts (frozen, no new feature work) ─────────────────────────────
legacy = [
  "PyYAML>=6.0",
  "scipy>=1.12",
]
# ── Optional numerical continuation (external, not always available) ─────────
pydstool = [
  "PyDSTool",   # no stable PyPI release; pin not enforced
]

[project.urls]
Homepage = "https://github.com/Xerkkun/Hidden-Attractors-Localization/tree/main/version_2"
Documentation = "https://github.com/Xerkkun/Hidden-Attractors-Localization/tree/main/version_2/docs"
Repository = "https://github.com/Xerkkun/Hidden-Attractors-Localization"
Issues = "https://github.com/Xerkkun/Hidden-Attractors-Localization/issues"

[project.scripts]
hidden-attractors-list-candidates = "hidden_attractors.cli:list_candidates"
hidden-attractors-systems = "hidden_attractors.cli:systems"
hidden-attractors-workflow-requirements = "hidden_attractors.cli:workflow_requirements"
hidden-attractors-check-validation = "hidden_attractors.validation_contract:main"
hidden-attractors-legacy = "hidden_attractors.legacy:main"
hidden-attractors-unified-chua = "hidden_attractors.workflows.unified_chua:main"
hidden-attractors-robustness-overlay = "hidden_attractors.workflows.robustness_overlay:main"
hidden-attractors-sphere-controls = "hidden_attractors.workflows.sphere_controls:main"
hidden-attractors-refined-basin = "hidden_attractors.workflows.refined_basin:main"
hidden-attractors-strict-target-refinement = "hidden_attractors.workflows.strict_target_refinement:main"
hidden-attractors-danca-abm-sphere-controls = "hidden_attractors.workflows.danca_abm_sphere_controls:main"
hidden-attractors-fractional-report-run = "hidden_attractors.workflows.fractional_report_run:main"
hidden-attractors-extended-search = "hidden_attractors.legacy:extended_search"
hidden-attractors-danca2017 = "hidden_attractors.legacy:danca2017"
hidden-attractors-nyquist-pipeline = "hidden_attractors.legacy:nyquist_pipeline"
hidden-attractors-integer-chua = "hidden_attractors.legacy:integer_chua"
hidden-attractors-hidden-verify = "hidden_attractors.legacy:hidden_verify"
hidden-attractors-basin-compare = "hidden_attractors.legacy:basin_compare"
hidden-attractors-positive-x-basin = "hidden_attractors.legacy:positive_x_basin"
hidden-attractors-machado-targeted = "hidden_attractors.legacy:machado_targeted"

[tool.setuptools.packages.find]
include = ["hidden_attractors*", "tools*", "benchmarks*"]

[tool.setuptools.package-data]
hidden_attractors = ["native/csrc/*.c"]
"tools.legacy" = ["*.c", "*.ps1", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-p",
  "no:cacheprovider",
]

[tool.pytest-benchmark]
disable_gc = true
timer = "time.perf_counter"
min_rounds = 3
max_time = 10.0
warmup = false
histogram = false
# Store baselines in .benchmarks/ (git-ignored by default)
storage = "file"
storage_path = ".benchmarks"
