[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidden-attractors-fo"
version = "0.1.0"
description = "Numerical workflows for locating and verifying hidden attractor candidates in fractional-order systems."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hidden Attractors Fractional Order project", email = "xerkkun@fyskode.com" }
]
keywords = ["fractional-order systems", "hidden attractors", "Chua", "Caputo", "EFORK"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

  "Topic :: Scientific/Engineering :: Mathematics",
]
# 芒鈥濃偓芒鈥濃偓 Core runtime 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
# Support policy: Pragmatic extended support to maintain compatibility with older
# environments (Python 3.11, NumPy 1.26, Matplotlib 3.8, SciPy 1.12) beyond the
# strict SPEC-0 rolling drop dates (which would drop 3.11/1.26/3.8/1.12 by mid-2026).
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scipy>=1.12",
  "numba>=0.63.0",
]


[project.optional-dependencies]
# 芒鈥濃偓芒鈥濃偓 Development 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-benchmark>=4.0",
]
# 芒鈥濃偓芒鈥濃偓 Optional scientific analysis 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
analysis = [
  "antropy>=0.1.6",
  "nolds>=0.6.1",
  "scipy>=1.12",
]
# 芒鈥濃偓芒鈥濃偓 Documentation build 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
# 芒鈥濃偓芒鈥濃偓 Legacy scripts (frozen, no new feature work) 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
legacy = [
  "PyYAML>=6.0",
  "scipy>=1.12",
]
# 芒鈥濃偓芒鈥濃偓 Optional numerical continuation (external, not always available) 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
pydstool = [
  "PyDSTool",   # no stable PyPI release; pin not enforced
]

[project.urls]
Homepage = "https://github.com/Xerkkun/Hidden-Attractors-Localization/tree/main/version_2"
Documentation = "https://github.com/Xerkkun/Hidden-Attractors-Localization/tree/main/version_2/docs"
Repository = "https://github.com/Xerkkun/Hidden-Attractors-Localization"
Issues = "https://github.com/Xerkkun/Hidden-Attractors-Localization/issues"

[project.scripts]
hidden-attractors = "hidden_attractors.cli.main:main"


[tool.setuptools.packages.find]
include = ["hidden_attractors*", "tools*", "benchmarks*"]

[tool.setuptools.package-data]
hidden_attractors = ["native/csrc/*.c", "configs/examples/*.yaml", "configs/schemas/*.json"]
"tools.legacy" = ["*.c", "*.ps1", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-p",
  "no:cacheprovider",
]
markers = [
  "wolfram: Wolfram Language algebraic/numerical validation (requires wolframscript; skipped if absent)",
  "native: native C backend validation (skipped if the compiler is unavailable)",
  "published: quantitative validation against explicitly extracted published values",
  "slow: extensive numerical validation excluded from the quick suite",
  "regression: deterministic numerical regression tests against stored references",
  "unit: fast unit tests",
  "scientific_contract: mathematical and scientific invariants",
  "cli: command-line interface tests",
  "plotting: figure export and plotting contract tests",
  "validation_contract: validation evidence contract tests",
  "literature_traceability: bibliographic and published-case traceability tests",
  "integration: short integration tests",
  "migration: temporary migration tests",
  "deprecated_alias: tests for compatibility aliases scheduled for removal",
  "hygiene: repository cleanliness and packaging hygiene",
  "cpc_readiness: CPC submission metadata and packaging readiness checks",
]

[tool.pytest-benchmark]
disable_gc = true
timer = "time.perf_counter"
min_rounds = 3
max_time = 10.0
warmup = false
histogram = false
# Store baselines in .benchmarks/ (git-ignored by default)
storage = "file"
storage_path = ".benchmarks"


